force-app/main/default/objects/Apttus_Config2__ChargeType__c/Apttus_Config2__ChargeType__c.object-meta.xml
<CustomObject>
    <description>Represents a type of charge for a product or service.</description>
    <label>Charge Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>