force-app/main/default/objects/Apttus_Config2__ChargeType__c/fields/Apttus_Config2__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Label__c</fullName>
    <description>The charge type label</description>
    <inlineHelpText>The charge type label</inlineHelpText>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Price</fullName>
            </value>
            <value>
                <fullName>License Fee</fullName>
            </value>
            <value>
                <fullName>Hardware Fee</fullName>
            </value>
            <value>
                <fullName>Software Fee</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Implementation Fee</fullName>
            </value>
            <value>
                <fullName>Support Fee</fullName>
            </value>
            <value>
                <fullName>Subscription Fee</fullName>
            </value>
            <value>
                <fullName>Installation Fee</fullName>
            </value>
            <value>
                <fullName>Maintenance Fee</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>YRC</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Usage Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>