force-app/main/default/objects/Apttus_Config2__ChargeType__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>The charge type display sequence</description>
    <inlineHelpText>The charge type display sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>